--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     //打包后应用名称
     android.applicationVariants.all { variant ->
         variant.outputs.all { output ->
@@ -37,19 +36,18 @@ android {
             }
         }
     }
-
     //MVVM模式
     dataBinding {
         enabled = true
     }
-
     kapt {
         generateStubs = true
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
@@ -57,9 +55,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //DataBind
     kapt "com.android.databinding:compiler:3.1.3"
-
     implementation 'com.github.linqinen708:library:1.0.5'
 }
